[project]
name = "diffusion-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "spacy>=3.8.13",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "wandb>=0.28.1",
]

[[tool.uv.index]]
url = "https://artifactory.itg.ti.com/artifactory/api/pypi/pypi-virtual/simple"
default = true
